# h5cpp

./: .gitignore  .travis.yml  CHANGES  CMakeLists.txt  CONTRIBUTORS  COPYRIGHT  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL  LICENCE.H5CPP  LICENSE  LICENSE.H5CPP  Makefile  README.md  appveyor.yml  configure  h5cpp.1  h5cpp.pc
cmake/: config.cmake.in
compiler/: Makefile  consumer.hpp  h5cpp.cpp  producer.hpp  producer_h5.hpp  producer_text.hpp  utils.hpp
debian/: changelog  control  copyright  files  rules  watch
debian/upstream/: metadata  signing-key.asc
docs/: Makefile  README.md  mkdocs.yml
docs/diagrams/: H5 CAPI wrap .graphml  h5cpp.graphml  hdf5 CAPI.graphml
docs/docs/: architecture.md  compiler.md  examples.md  index.md  install.md  meta.md  performance.md  presentations.md  stl.md  test.md  typesystem.md  windows.md
docs/docs/dot/: type.dot  watch
docs/docs/examples/: container.md  datasets.md  groups.md
docs/links/: h5cpp.txt  hdf5.txt  linalg.txt  stl.txt
docs/org/: hello.org
docs/pages/: blog.md  compiler.md  compiler_trial.md  confluence.md  conversion.md  cout.md  error_handling.md  exceptions.md  install.md  linalg.md  not_available.md  objects.md  presentation.md  profiling.md  property_lists.md  usergroup.md
docs/research/: H5Dchunk.hpp  Makefile  edges.txt  prop.cpp  prop_custom.cpp  prop_register.cpp  result  saved.cpp  saved_gerd.cpp  tile.cache  tile.callgrind  tile.cpp  write_chunk_edge.c
docs/theme/: base.html
doxy/: Doxyfile  DoxygenLayout.xml  Makefile  customdoxygen.css  doxy-boot.js  footer.html  header.html  redirect.py
examples/: CMakeLists.txt  Makefile  README.md  arma-partial.cpp  arma.cpp  blaze.cpp  blitz.cpp  eigen3.cpp  exceptions.cpp  file.cpp  itpp.cpp  properties.cpp  raii.cpp  raw.cpp  stl.cpp  string.cpp  struct.cpp  ublas.cpp
examples/.deps/: arma.Po  base.Po  stl.Po
examples/attributes/: Makefile  README.md  attributes  attributes.cpp  generated.h  utils.hpp
examples/basics/: Makefile  basics  basics.cpp
examples/before-after/: Makefile  compound.c  compound.cpp  compound.h  generated.h
examples/compound/: Makefile  generated.h  struct  struct.cpp  utils.hpp
examples/container/: Makefile  container.cpp
examples/csv/: Makefile  README.md  csv2hdf5.cpp  generated.h  input.csv  struct.h
examples/custom_pipeline/: Makefile  pipeline.cpp
examples/datasets/: Makefile  datasets  datasets.cpp
examples/datatypes/: Makefile  README.md  n-bit  n-bit.cpp  n-bit.hpp  two-bit  two-bit.cpp  two-bit.hpp
examples/exceptions/: groups.cpp
examples/groups/: Makefile  groups.cpp
examples/half-float/: README.md  generated.h  half-float.cpp
examples/half-float/christian-rau/: Makefile  README.md  half-float  half-float.cpp  struct.h  utils.hpp
examples/half-float/open-exr/: Makefile  README.md  half-float.cpp  utils.hpp
examples/kita/: Makefile  README.md  kita.cpp
examples/linalg/: Makefile  arma  arma.cpp  blaze.cpp  blitz.cpp  dlib  dlib.cpp  eigen3  eigen3.cpp  etl.cpp  itpp.cpp  ublas.cpp
examples/mpi/: collective.cpp  independent.cpp  throughput.cpp
examples/multi-tu/: Makefile  app  main.cpp  tu-01.cpp  tu-01.h  tu-02.cpp  tu-02.h  tu_01.cpp  tu_01.h  tu_02.cpp  tu_02.h  utils.hpp
examples/optimized/: Makefile  optimized  optimized.cpp
examples/packet-table/: .Makefile.swp  .struct.cpp.swp  Makefile  generated.h  packet_batches.cpp  packettable  packettable.cpp  struct.h  utils.hpp
examples/perf/: Makefile  arma-perf.cpp  stl-perf.cpp
examples/raw_memory/: .arma.cpp.swp  Makefile  raw  raw.cpp
examples/reference/: Makefile  reference.cpp
examples/sparse/: Makefile  README.md  arma.cpp
examples/stl/: Makefile  array.cpp  generated.h  struct.h  utils.hpp  vector  vector.cpp
examples/string/: Makefile  string  string.cpp
examples/transform/: Makefile  transform  transform.cpp
examples/utf/: Makefile  utf  utf.cpp
h5cpp/: H5Acreate.hpp  H5Adelete.hpp  H5Aopen.hpp  H5Aread.hpp  H5Awrite.hpp  H5Dappend.hpp  H5Dcreate.hpp  H5Dgather.hpp  H5Dopen.hpp  H5Dread.hpp  H5Dscatter.hpp  H5Dwrite.hpp  H5Eall.hpp  H5Fcreate.hpp  H5Fopen.hpp  H5Gall.hpp  H5Ialgorithm.hpp  H5Iall.hpp  H5Mall.hpp  H5Marma.hpp  H5Mbase.hpp  H5Mblaze.hpp  H5Mblitz.hpp  H5Mdlib.hpp  H5Meig.hpp  H5Meigen.hpp  H5Mfundamental.hpp  H5Mitplus.hpp  H5Mitpp.hpp  H5Mlinalg.hpp  H5Mstl.hpp  H5Mublas.hpp  H5Pall.hpp  H5Pall.new.hpp  H5Pdapl.hpp  H5Pdcpl.hpp  H5Rall.hpp  H5Sall.hpp  H5Tall.hpp  H5Tconversion.hpp  (+38 more)
h5cpp-llvm/: arm_neon.h
interop/python/: sparse.jl  sparse.py
org/: after.org  armadillo.org  before.org  compound.h  dataset-creation.org  files.org  hello.org  mux.org
profile/: Makefile  harness  harness.cpp
profile/gperf/: Makefile  arma-perf.cpp  stl-perf.cpp  struct-perf.cpp  tickdata-perf  tickdata-perf.cpp
profile/grid_engine/: Makefile  harness.cpp  runner.hpp  submit
profile/throughput/: Makefile  perf.tsv  read  read.cpp  run  tile.cpp
profiling/: Makefile  README.md  bandwidth.cpp  struct-perf.cpp
profiling/gperf/: Makefile  arma-perf.cpp  stl-perf.cpp  struct-perf.cpp
profiling/grid-engine/: Makefile  bandwidth.cpp  read.hpp  submit
scripts/: install-base.sh  install-hdf5.sh
tests/: CMakeLists.txt  H5A.cpp  H5Dappend.cpp  H5Dcreate.cpp  H5Dread.cpp  H5Dwrite  H5Dwrite.cpp  H5Dwrite.hpp  H5E  H5E.cpp  H5Fcreate.cpp  H5Fopen.cpp  H5Iall.cpp  H5Marma.cpp  H5Meigen.cpp  H5Pall.cpp  H5Pdapl.cpp  H5Sall.cpp  H5Tall.cpp  H5Tmeta.cpp  H5cmake.cpp  H5plot-integral.cpp  H5plot-typemap.cpp  H5plots.cpp  Makefile  README.md  abstract.h  armadillo.cpp  basic.cpp  basic_read_write_append.cpp  blaze.cpp  blitz.cpp  chrono.cpp  dlib.cpp  eigen3.cpp  event_listener.hpp  example.cpp  integral.cpp  itpp.cpp  macros.cpp  (+10 more)
tests/linalg/: all  armadillo.hpp  blaze.hpp  blitz.hpp  dlib.hpp  eigen3.hpp  itpp.hpp  ublas.hpp
tests/utils/: abstract.hpp  listener.hpp  names.hpp  pod_t.hpp  types.hpp
